--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<!DOCTYPE html>>
-<html lang="en"></html>
-<head></head>
-<meta charset="utf-8">
-<title>My First Webpage</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My First Website</title>
+</head>
+<body>
+  <p>ipsum dolor sit <strong>consectetur adipisicing elit.</strong>  Eligendi, molestias modi</p> 
+  <p>nobis praesentium alias <em> aliquam perspiciatis, hic blanditiis</em> exercitationem dolorem. Dolorum obcaecati delectus, nesciunt quod enim animi laudantium!</p> 
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid amet quam alias quis, dolor omnis quidem et repellat esse sit? Recusandae assumenda beatae ipsum. Dolore commodi magni fugiat obcaecati nulla.
+</body>
+</html>
